@startuml Comics_DB_Schema
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #333333

' Entity Relationship Diagram for Comics Database

entity "users" as users {
  **id** : SERIAL PRIMARY KEY
  --
  username : TEXT [NOT NULL]
  email : TEXT [NOT NULL, UNIQUE]
  password : TEXT [NOT NULL]
  is_admin : BOOLEAN [DEFAULT FALSE, NOT NULL]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "issue_series" as issue_series {
  **id** : SERIAL PRIMARY KEY
  --
  name : TEXT [NOT NULL]
  desc : TEXT
  start_date : DATE [NOT NULL]
  end_date : DATE
  added_by : INT [FK → users.id, ON DELETE SET NULL]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "issues" as issues {
  **id** : SERIAL PRIMARY KEY
  --
  name : TEXT [NOT NULL]
  number : INTEGER
  cover_date : DATE
  parution_date : DATE
  series_id : INT [FK → issue_series.id, ON DELETE SET NULL]
  added_by : INT [FK → users.id, ON DELETE SET NULL]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "publishers" as publishers {
  **id** : SERIAL PRIMARY KEY
  --
  name : TEXT [NOT NULL, UNIQUE]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "series" as series {
  **id** : SERIAL PRIMARY KEY
  --
  name : TEXT [NOT NULL]
  ongoing : BOOLEAN [DEFAULT FALSE, NOT NULL]
  oneshot : BOOLEAN [DEFAULT FALSE, NOT NULL]
  nvolumes : SMALLINT
  start_date : DATE [NOT NULL]
  end_date : DATE
  added_by : INT [FK → users.id, ON DELETE SET NULL]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "books" as books {
  **id** : SERIAL PRIMARY KEY
  --
  name : TEXT [NOT NULL]
  desc : TEXT
  number : INTEGER
  vo_content : TEXT
  img_url : TEXT
  series_id : INT [FK → series.id, ON DELETE SET NULL]
  added_by : INT [FK → users.id, ON DELETE SET NULL]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "editions" as editions {
  **id** : SERIAL PRIMARY KEY
  --
  publisher_id : INT [FK → publishers.id, ON DELETE SET NULL]
  book_id : INT [FK → books.id, ON DELETE CASCADE, NOT NULL]
  isbn : VARCHAR(20)
  ean : VARCHAR(20)
  npages : INT
  price : REAL
  url : TEXT
  img_url : TEXT
  cover_type : TEXT
  parution_date : DATE
  added_by : INT [FK → users.id, ON DELETE SET NULL]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "edition_ownership" as edition_ownership {
  **id** : SERIAL PRIMARY KEY
  --
  user_id : INT [FK → users.id, ON DELETE CASCADE, NOT NULL]
  edition_id : INT [FK → editions.id, ON DELETE SET NULL, NOT NULL]
  date : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  read : BOOLEAN [DEFAULT FALSE, NOT NULL]
  date_read : DATE
  gift : BOOLEAN [DEFAULT FALSE, NOT NULL]
  signed : BOOLEAN [DEFAULT FALSE, NOT NULL]
  purchase_price : NUMERIC(10,2)
  fees : NUMERIC(10,2)
  retail_price : NUMERIC(10,2)
  note : TEXT
}

entity "wishlist" as wishlist {
  **user_id** : INT [FK → users.id, ON DELETE CASCADE]
  **book_id** : INT [FK → books.id, ON DELETE CASCADE]
  ..
  (Composite PRIMARY KEY)
}

entity "books_issues" as books_issues {
  **book_id** : INT [FK → books.id, ON DELETE CASCADE]
  **issue_id** : INT [FK → issues.id, ON DELETE CASCADE]
  ..
  (Composite PRIMARY KEY)
}

' Contribution System
entity "contribution_bundles" as contribution_bundles {
  **id** : SERIAL PRIMARY KEY
  --
  submitter_id : INT [FK → users.id, ON DELETE CASCADE, NOT NULL]
  status : enum [VALUES: pending, approved,\nrejected, needs_revision]
  note : TEXT
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
  modified_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

entity "contributions" as contributions {
  **id** : SERIAL PRIMARY KEY
  --
  bundle_id : INT [FK → contribution_bundles.id,\nON DELETE CASCADE, NOT NULL]
  local_ref : TEXT
  entity_type : enum [VALUES: book, serie,\nedition, issue, issueserie, publisher,\nlink_book_issue]
  action : enum [VALUES: create, update, delete]
  entity_id : INT [NULL for create actions]
  proposed_data : JSONB [NOT NULL]
  entity_snapshot : JSONB [NULL for create actions]
  status : enum [VALUES: pending, approved,\nrejected, skipped, needs_revision]
  resolved_entity_id : INT
}

entity "contribution_reviews" as contribution_reviews {
  **id** : SERIAL PRIMARY KEY
  --
  contribution_id : INT [FK → contributions.id,\nON DELETE CASCADE, NOT NULL]
  reviewer_id : INT [FK → users.id,\nON DELETE CASCADE, NOT NULL]
  comment : TEXT [NOT NULL]
  created_at : TIMESTAMPTZ [DEFAULT now(), NOT NULL]
}

' Relationships
users ||--o{ issue_series : "adds"
users ||--o{ issues : "adds"
users ||--o{ series : "adds"
users ||--o{ books : "adds"
users ||--o{ editions : "adds"
users ||--o{ edition_ownership : "owns"
users ||--o{ contribution_bundles : "submits"
users ||--o{ contribution_reviews : "reviews"

issue_series ||--o{ issues : "contains"

series ||--o{ books : "contains"

publishers ||--o{ editions : "publishes"
books ||--o{ editions : "has"
books ||--o{ wishlist : "wished"
books ||--o{ books_issues : "contains"

editions ||--o{ edition_ownership : "owned_by"

issues ||--o{ books_issues : "appears_in"

contribution_bundles ||--o{ contributions : "includes"
contributions ||--o{ contribution_reviews : "reviewed_by"

note right of users
  Central user entity
  Admin flag for access control
  Tracks content contributions
end note

note right of books
  Core entity: represents volumes/books
  Can be linked to series OR issues
  Image URL for cover display
end note

note right of editions
  Physical/digital publication variant
  Multiple editions per book possible
  ISBN/EAN for identification
end note

note right of edition_ownership
  User collection tracking
  Ownership metadata (gift, signed, etc)
  Price tracking and reading status
end note

note right of contribution_bundles
  Enables collaborative content curation
  Bundle status: pending→approved/rejected
  Supports revision workflow
end note

note right of contributions
  Individual data changes within bundle
  Stores JSON diffs and snapshots
  Tracks action type: create/update/delete
  Supports entity types: books, series, etc.
end note

@enduml
